--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="empty_friends_message">Add friends to get started!</string>
     <string name="edit_friends_menu_label">Edit Friends</string>
     <string name="default_no_edit_users">No users found yet!</string>
-    <string name="tab3_title_label">Explore</string>
+    <string name="tab3_title_label">My Bucket List</string>
     <string name="my_profile">My Profile</string>
     <string name="edit_bucketlist">Edit BucketList</string>
 </resources>
