Fixed bug relating the FB login issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="tab3_title_label">My Bucket List</string>
     <string name="my_profile">My Profile</string>
     <string name="edit_bucketlist">Edit BucketList</string>
+    <string name = "facebook_app_id">685104905014759</string>
 </resources>
